# Local-Product-Specification-RAG-Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
data/processed/: benchmark_results_embedding.json  chunks_natural.json
src/: api.py  embeddings.py  llm.py  rag_natural.py  run_benchmark_embedding.py
